# pems

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  compose.yml  data.json  index.html  manage.py  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  postAttach.sh
.github/: CODEOWNERS  lighthouserc.json
.github/ISSUE_TEMPLATE/: release.yml
.github/workflows/: codeql.yml  dependency-triage.yml  deploy-troubleshoot.yml  deploy.yml  labeler-actions.yml  labeler-docs.yml  mkdocs.yml  tests-pytest.yml  tests-ui.yml
appcontainer/: Dockerfile  gunicorn.conf.py  nginx.conf
copilot/streamlit/: manifest.yml
copilot/web/: manifest.yml
deployment/hotfix/: index.html
deployment/release/: index.html
deployment/rollback/: index.html
development/: index.html
docs/: .pages  README.md
docs/deployment/: .pages  hotfix.md  release.md  rollback.md
docs/development/: README.md
docs/styles/: theme.css
elasticstack/: reset.sh  start.sh
elasticstack/esconfig/: instances.yml  setup.sh
elasticstack/filebeat01/: Dockerfile  filebeat.yml
elasticstack/kibana/: kibana.yml
elasticstack/logstash01/: Dockerfile  logstash.conf
elasticstack/metricbeat01/: Dockerfile  metricbeat.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2ea51872b0c7c631_admin_py.html  z_2ea51872b0c7c631_apps_py.html  z_2ea51872b0c7c631_models_py.html  z_2ea51872b0c7c631_urls_py.html  z_2ea51872b0c7c631_views_py.html  z_629c32a36b1ff97a_ensure_db_py.html  z_8210505d354b5ec0_main_py.html  z_8210505d354b5ec0_utils_py.html  z_85b1c375a82dac04_0001_initial_py.html  z_bf139fc8a65e8a08___init___py.html  z_bf139fc8a65e8a08_settings_py.html  z_bf139fc8a65e8a08_urls_py.html  z_bf139fc8a65e8a08_wsgi_py.html  z_fd7437893f85fa1f_context_processors_py.html  z_fd7437893f85fa1f_middleware_py.html  z_fd7437893f85fa1f_urls_py.html
infra/cloudformation/: gh_actions.yml  parameter_store.yml
infra/copilot/: .workspace
infra/copilot/environments/addons/: postgres-web.yml  postgres.yml  s3-web.yml
infra/copilot/streamlit/: manifest.yml
infra/copilot/web/: manifest.yml
infra/copilot/web/addons/: pems-db.yml  postgres-web.yml  s3-web-access-policy.yml
pems/: __init__.py  local_fixtures.json  settings.py  urls.py  wsgi.py
pems/core/: context_processors.py  middleware.py  urls.py
pems/core/management/commands/: ensure_db.py
pems/core/templates/core/: base.html  index.html
pems/districts/: apps.py  models.py  urls.py  views.py
pems/districts/migrations/: 0001_initial.py
pems/districts/templates/districts/: district.html  index.html  navigation.html
pems/static/css/: styles.css
pems/streamlit_sample/: apps.py  urls.py
pems/streamlit_sample/templates/streamlit_sample/: index.html
pems/templates/: 404.html
search/: search_index.json
streamlit_app/: Dockerfile  entrypoint.sh  main.py  requirements.txt  utils.py
streamlit_app/apps/: __init__.py
streamlit_app/apps/sample/: app_bikeshare.py  pygwalker.json
streamlit_app/apps/stations/: app_stations.py  d03_text_meta_2025_04_22.txt  d04_text_meta_2025_01_15.txt  d05_text_meta_2025_04_18.txt  d06_text_meta_2024_10_30.txt  d07_text_meta_2023_12_22.txt
tests/pytest/: conftest.py  run.sh  settings.py  test_settings.py
tests/pytest/core/: test_middleware_healthcheck.py
tests/pytest/pems/: conftest.py
tests/pytest/pems/core/: test_context_processors.py
tests/pytest/pems/core/management/commands/: test_ensure_db.py
tests/pytest/pems/districts/: test_models.py  test_views.py
tests/pytest/streamlit_app/: test_main.py  test_utils.py
tests/pytest/streamlit_app/test_apps/: app_one.py  app_two.py  not_an_app.py
