[project]
name = "pems"
dynamic = ["version"]
description = "Caltrans Performance Measurement System (PeMS) is an application that enables access to traffic data collected by sensors that span the freeway system across all major metropolitan areas of the State of California."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3 :: Only"]
requires-python = ">=3.12"
maintainers = [{ name = "Compiler LLC", email = "dev@compiler.la" }]
dependencies = ["Django==5.2.3", "gunicorn==23.0.0"]

[project.optional-dependencies]
dev = ["black", "djlint", "flake8", "pre-commit", "setuptools_scm>=8"]

test = ["coverage", "pytest", "pytest-django", "pytest-mock", "pytest-socket"]

[project.urls]
Code = "https://github.com/compilerla/pems"
Homepage = "https://compilerla.github.io/pems/"
Issues = "https://github.com/compilerla/pems/issues"

[build-system]
requires = ["setuptools>=75", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ["py312"]
include = '\.pyi?$'

[tool.coverage.run]
branch = true
relative_files = true
source = ["pems", "streamlit_app"]
omit = ["streamlit_app/apps/*"]

[tool.djlint]
ignore = "H006,H017,H031"
indent = 2
max_attribute_length = 127
max_line_length = 127
profile = "django"
preserve_blank_lines = true
use_gitignore = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pems.settings"

[tool.setuptools.packages.find]
include = ["pems*"]
namespaces = false

[tool.setuptools_scm]
# intentionally left blank, but we need the section header to activate the tool
